fix distorted image by applying different css settings

--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -481,3 +481,9 @@ input[type="file"] {
     border: 3px solid #7A35EC;
     border-radius: 1rem;
 }
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
